kube/services/netpolicy/networkpolicy_wts_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-wts
spec:
  podSelector:
    matchLabels:
      app: wts
  ingress:
    - from:
      - namespaceSelector:
        matchLabels:
          purpose: jupyter-pods
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: wts
      - podSelector:
          matchLabels:
            app: fence
      - ipBlock:
           cidr: GEN3_GDCAPIDB_IP/32
      - ipBlock:
           cidr: GEN3_CLOUDPROXY_CIDR
      - ipBlock:
           cidr: 0.0.0.0/0
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20

  policyTypes:
   - Ingress
   - Egress
